--- a/source/python_intro.ipynb
+++ b/source/python_intro.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# python crash course\n",
+    "# python crash course by Xiaolong Li\n",
     "\n",
     "a very short introduction to python\n",
     "\n",
